got new look ready, now comes the automation scripts and things

--- a/new/blogs/ai-and-tribe.html
+++ b/new/blogs/ai-and-tribe.html
@@ -458,12 +458,15 @@
         <center>
             <div class="bottom-clause">
                 Got any objections to my points? love to hear them. Feel free to
-                drop me a mail or ping me on TG / Matrix.
+                drop me a mail or ping me on Matrix.
             </div>
             <div><span class="mdi mdi-copyleft"></span> 2025 Agraj P Das</div>
             <div>
-                Note: This site was developed and works best in the Firefox
-                browser. (solely personal)
+                Note: This site was developed and works best in the
+                <a href="https://www.firefox.com" class="footer-a"
+                    >Firefox browser</a
+                >
+                (solely personal)
             </div>
         </center>
     </footer>
