--- a/new/blogs.html
+++ b/new/blogs.html
@@ -65,6 +65,7 @@
                         </div>
                     </a>
                 </div>
+                <hr />
 
                 <div class="item-card">
                     <a href="/blogs/we-love-superheros-and-it-s-cool.html">
@@ -87,6 +88,7 @@
                         </div>
                     </a>
                 </div>
+                <hr />
 
                 <div class="item-card">
                     <a href="/blogs/life-is-no-a-function-of-time.html">
@@ -106,6 +108,7 @@
                         </div>
                     </a>
                 </div>
+                <hr />
             </div>
         </div>
         <script src="./scripts.js" anonymoue></script>
@@ -114,8 +117,11 @@
         <center>
             <div><span class="mdi mdi-copyleft"></span> 2025 Agraj P Das</div>
             <div>
-                Note: This site was developed and works best in the Firefox
-                browser. (solely personal)
+                Note: This site was developed and works best in the
+                <a href="https://www.firefox.com" class="footer-a"
+                    >Firefox browser</a
+                >
+                (solely personal)
             </div>
         </center>
     </footer>
