--- a/new/index.html
+++ b/new/index.html
@@ -212,8 +212,11 @@
         <center>
             <div><span class="mdi mdi-copyleft"></span> 2025 Agraj P Das</div>
             <div>
-                Note: This site was developed and works best in the Firefox
-                browser. (solely personal)
+                Note: This site was developed and works best in the
+                <a href="https://www.firefox.com" class="footer-a"
+                    >Firefox browser</a
+                >
+                (solely personal)
             </div>
         </center>
     </footer>
