--- a/new/projects.html
+++ b/new/projects.html
@@ -74,6 +74,7 @@
                         </div>
                     </div>
                 </div>
+                <hr />
 
                 <div class="item-card">
                     <div class="item-img">
@@ -104,6 +105,7 @@
                         </div>
                     </div>
                 </div>
+                <hr />
 
                 <div class="item-card">
                     <div class="item-img">
@@ -135,6 +137,7 @@
                         </div>
                     </div>
                 </div>
+                <hr />
             </div>
         </div>
         <script src="./scripts.js" anonymoue></script>
@@ -143,8 +146,11 @@
         <center>
             <div><span class="mdi mdi-copyleft"></span> 2025 Agraj P Das</div>
             <div>
-                Note: This site was developed and works best in the Firefox
-                browser. (solely personal)
+                Note: This site was developed and works best in the
+                <a href="https://www.firefox.com" class="footer-a"
+                    >Firefox browser</a
+                >
+                (solely personal)
             </div>
         </center>
     </footer>
