--- a/new/blogs.html
+++ b/new/blogs.html
@@ -14,6 +14,49 @@
             rel="stylesheet"
             crossorigin="anonymous"
         />
+        <style>
+            :root {
+                /* Light Theme Defaults */
+                --text-color: #7d7d7d;
+                --text-color-bold: #515151;
+                --text-color-blog: #7d7d7d;
+                --text-color-footer: #909497;
+                --highlight-color: #96e2ff;
+                --highlight-color-text: #575757;
+                --highlight-color-socials: #4fc4f0;
+                --background-color: #ffffff;
+                --hr-divider-color: #f0f0f0;
+                --max-content-width: 600px;
+            }
+
+            /* Dark Theme Overrides */
+            body.dark-mode {
+                --text-color: #909497;
+                --text-color-bold: #e0e0e0;
+                --text-color-blog: #909497;
+                --text-color-footer: #6a6f71;
+                --highlight-color: #3fafda;
+                --highlight-color-text: #262626;
+                --background-color: #1c1c1c;
+                --hr-divider-color: #282828;
+            }
+        </style>
+        <noscript>
+            <style>
+                @media (prefers-color-scheme: dark) {
+                    :root {
+                        --text-color: #909497;
+                        --text-color-bold: #e0e0e0;
+                        --text-color-blog: #909497;
+                        --text-color-footer: #6a6f71;
+                        --highlight-color: #3fafda;
+                        --highlight-color-text: #262626;
+                        --background-color: #1c1c1c;
+                        --hr-divider-color: #282828;
+                    }
+                }
+            </style>
+        </noscript>
         <link href="./style.css" rel="stylesheet" />
     </head>
     <body>
