--- a/new/projects.html
+++ b/new/projects.html
@@ -14,50 +14,21 @@
             rel="stylesheet"
             crossorigin="anonymous"
         />
-        <style>
-            :root {
-                /* Light Theme Defaults */
-                --text-color: #7d7d7d;
-                --text-color-bold: #515151;
-                --text-color-blog: #7d7d7d;
-                --text-color-footer: #909497;
-                --highlight-color: #96e2ff;
-                --highlight-color-text: #575757;
-                --highlight-color-socials: #4fc4f0;
-                --background-color: #ffffff;
-                --hr-divider-color: #f0f0f0;
-                --max-content-width: 600px;
-            }
-
-            /* Dark Theme Overrides */
-            body.dark-mode {
-                --text-color: #909497;
-                --text-color-bold: #e0e0e0;
-                --text-color-blog: #909497;
-                --text-color-footer: #6a6f71;
-                --highlight-color: #3fafda;
-                --highlight-color-text: #262626;
-                --background-color: #1c1c1c;
-                --hr-divider-color: #282828;
-            }
-        </style>
+        <link href="./css/color.css" rel="stylesheet" />
+        <link
+            href="./css/color-dark.css"
+            rel="stylesheet"
+            disabled
+            id="dark-theme-style"
+        />
         <noscript>
-            <style>
-                @media (prefers-color-scheme: dark) {
-                    :root {
-                        --text-color: #909497;
-                        --text-color-bold: #e0e0e0;
-                        --text-color-blog: #909497;
-                        --text-color-footer: #6a6f71;
-                        --highlight-color: #3fafda;
-                        --highlight-color-text: #262626;
-                        --background-color: #1c1c1c;
-                        --hr-divider-color: #282828;
-                    }
-                }
-            </style>
+            <link
+                href="./css/color-dark.css"
+                rel="stylesheet"
+                media="(prefers-color-scheme: dark)"
+            />
         </noscript>
-        <link href="./style.css" rel="stylesheet" />
+        <link href="./css/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="header">
